[package]
name = "stone_ledger"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.23"
data-encoding = "2.3.3"
hex-literal = "0.3.4"
mime = "0.3.16"
sha2 = "0.10.6"
strum = "0.24"
strum_macros = "0.24"


[[bin]]
name = "stone_ledger"
path = "src/main.rs"

[lib]
name = "stone_ledger"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
